# p2p

./: .gitignore  CMakeLists.txt  README.md  index.html  p2p.js  p2p~-help.pd  p2p~.cpp
.github/workflows/: builder.yml
max/: p2p~.cpp
p2p-signaling/: package-lock.json  package.json  test-final.js  test-simple.js  test.js  wrangler.toml
p2p-signaling/src/: index.js  room.js
puredata/: p2p~.cpp
signaling-server/: README.md
signaling-server/.wrangler/cache/: wrangler-account.json
signaling-server/src/: index.js  room.js
smartphone/: index.html  p2p.js
src/: message_queue.hpp  p2p~.cpp
tests/: audio-test.css  audio-test.js  video-test.css  video-test.js
tests/lat-lon/: index.html  main.pd
tests/manta-ray/: index.html  sketch.js
tests/receive-audio/: index.html
tests/receive-video/: index.html
tests/send-audio/: index.html
tests/send-receive-audio/: index.html
tests/send-receive-video/: index.html
tests/send-video/: index.html
tests/test1/: effect.frag  effect.vert  index.html  sketch.js  videop2p.js
